Refactoring with focus on creation of DTOs, services and custom errors
